--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
 }
-p {
+p, ul, ol {
   @include mdc-typography(body1);
 }
 .mdc-button {
