--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,8 @@
 @import "@material/typography/mdc-typography";
 @import "@material/button/mdc-button";
 @import "@material/icon-button/mdc-icon-button";
+@import "@material/textfield/mdc-text-field";
+@import "@material/notched-outline/mdc-notched-outline";
 //@import "fonts";
 @import "content-strip";
 @import "topnav";
@@ -20,4 +22,18 @@ p, ul, ol {
 }
 .mdc-button {
   @include mdc-button-shape-radius(0px);
+}
+.mdc-text-field {
+  @include mdc-text-field-ink-color($mdc-theme-on-background);
+  @include mdc-text-field-label-color(rgba(0,0,0,.6));
+  @include mdc-text-field-caret-color(rgba(0,0,0,.6));
+  @include mdc-text-field-outline-color(rgba(0,0,0,.24));
+  @include mdc-text-field-hover-outline-color(rgba(0,0,0,.87));
+  @include mdc-text-field-focused-outline-color($mdc-theme-primary);
+  @include mdc-text-field-outline-shape-radius(0);
+  &--focused:not(.mdc-text-field--disabled) {
+    .mdc-floating-label--float-above {
+      @include mdc-floating-label-ink-color($mdc-theme-primary);
+    }
+  }
 }
