--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,10 @@ html, body, h1, h2, h3, h4, h5, h6, p {
 p, ul, ol {
   @include mdc-typography(body1);
 }
+.page-content {
+  height: calc(100vh - 57px);
+  overflow: auto;
+}
 .mdc-button {
   @include mdc-button-shape-radius(0px);
 }
