add forms and documents page

--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -76,3 +76,20 @@ $collapsible-border-color: transparent;
 $collapsible-header-color: transparent;
 $element-top-margin: 0;
 $element-bottom-margin: 0;
+
+$tmd-table-border-opacity: 0.2;
+$tmd-table-row-border-opacity: 0.1;
+$tmd-table-header_row-text-opacity: 0.6;
+$tmd-table-row-text-opacity: 0.87;
+$tmd-table-header-text-opacity: 0.87;
+$tmd-table-header-font-size: 20px;
+$tmd-table-header-font-weight: 500;
+$tmd-table-header-height: 64px;
+$tmd-table-row-font-size: 14px;
+$tmd-table-row-height: 48px;
+$tmd-table-color: #000000;
+$tmd-table-row-hover-color: var($tmd-table-color);
+$tmd-table-header_row-font-weight: 500;
+$tmd-table-header_row-text-align: left;
+$tmd-table-outside_cell-padding: 16px;
+$tmd-table-border-opacity: 0.2;
