--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "topnav";
 @import "sidenav";
 @import "collapsible";
+@import "tmd-table";
 
 html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
