--- a/_scss/tmd-table.scss
+++ b/_scss/tmd-table.scss
@@ -1,5 +1,5 @@
 .tmd-table-wrapper {
-  border: 1px solid $tmd-table-color,$tmd-table-border-opacity;
+  border: 1px solid rgba($tmd-table-color,$tmd-table-border-opacity);
   border-radius: 3px;
   margin: $content-strip-padding-x $content-strip-padding-x;
 }
