update fonts and consolidate font-faces into one location

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 @import "@material/icon-button/mdc-icon-button";
 @import "@material/textfield/mdc-text-field";
 @import "@material/notched-outline/mdc-notched-outline";
-//@import "fonts";
+@import "fonts";
 @import "content-strip";
 @import "topnav";
 @import "sidenav";
