fix overflow not being hidden on full-page iframe include

--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -5,7 +5,7 @@
     overflow: hidden;
   }
   .page-content {
-    overflow: hiden;
+    overflow: hidden;
   }
   .general-iframe {
     width: 100%;
