add members dropdown pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,28 +90,28 @@
               </li>
               <li class="dropdown"><a href="javascript:void(0)" id="info">Info<spam class="hide-small">rmation</span></a>
                 <ul>
-                  <li><a href="forms-documents.html">Forms &amp; Documents</a></li>
-                  <li><a href="advancement.html">Advancement</a></li>
-                  <li><a href="participation.html">Participation</a></li>
-                  <li><a href="leadership-training.html">Leadership Training</a></li>
-                  <li><a href="faqs.html">Frequently Asked Questions</a></li>
-                  <li><a href="finding-mb.html">Merit Badges</a></li>
-                  <li><a href="helpful-links.html">Helpful Links</a></li>
+                  <li><a href="/forms-documents.html">Forms &amp; Documents</a></li>
+                  <li><a href="/advancement.html">Advancement</a></li>
+                  <li><a href="/participation.html">Participation</a></li>
+                  <li><a href="/leadership-training.html">Leadership Training</a></li>
+                  <li><a href="/faqs.html">Frequently Asked Questions</a></li>
+                  <li><a href="/finding-mb.html">Merit Badges</a></li>
+                  <li><a href="/helpful-links.html">Helpful Links</a></li>
                 </ul>
               </li>
               <li class="dropdown"><a href="javascript:void(0)" id="tevents">Events</a>
                 <ul>
-                  <li><a href="camps-adventure.html">Camps/High Adventure</a><li>
-                  <li><a href="campout-schedule-local-events.html">Campout Schedule &amp; Local Events</a><li>
+                  <li><a href="/camps-adventure.html">Camps/High Adventure</a><li>
+                  <li><a href="/campout-schedule-local-events.html">Campout Schedule &amp; Local Events</a><li>
                 </ul>
               </li>
               <li class="dropdown"><a href="javascript:void(0)" id="members">Members</a>
                 <ul>
-                  <li><a href="communication_encrypted.html">Communication</a><li>
-                  <li><a href="calendar_encrypted.html">Calendar</a><li>
-                  <li><a href="mb-counselors_encrypted.html">Merit Badge Counselors</a><li>
-                  <li><a href="troop-roster_encrypted.html">Troop Roster</a><li>
-                  <li><a href="what-can-i-do_encrypted.html">What Can I Do?</a><li>
+                  <li><a href="/communication_encrypted.html">Communication</a><li>
+                  <li><a href="/calendar_encrypted.html">Calendar</a><li>
+                  <li><a href="/mb-counselors_encrypted.html">Merit Badge Counselors</a><li>
+                  <li><a href="/troop-roster_encrypted.html">Troop Roster</a><li>
+                  <li><a href="/what-can-i-do_encrypted.html">What Can I Do?</a><li>
                 </ul>
               </li>
               <li><a href="/photos.html" id="photos">Photos</a></li>
