--- a/_scss/sidenav.scss
+++ b/_scss/sidenav.scss
@@ -38,7 +38,12 @@ ul {
     float: none;
     line-height: $sidenav-line-height;
 
-    &.active { background-color: rgba(0,0,0,.05); }
+    &.active {
+      background-color: rgba(0,0,0,.05);
+      > a > i.material-icons.drop-arrow {
+        transform: rotate(-180deg);
+      }
+    }
   }
 
   li > a {
@@ -59,9 +64,10 @@ ul {
       float: left;
       height: $sidenav-item-height;
       line-height: $sidenav-line-height;
-      margin: 0 $sidenav-padding 0 0;
-      width: $sidenav-item-height / 2;
+      margin: 0 calc($sidenav-padding - 6px) 0 0;
+      width: 2rem;
       color: rgba(0,0,0,.54);
+      transition: transform 0.2s;
     }
   }
 
