--- a/_layouts/encrypted.html
+++ b/_layouts/encrypted.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+    <meta name="theme-color" content="#efefef">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/page/staticrypt.css">
     <title>Protected Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
@@ -11,133 +14,36 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
     <meta http-equiv="pragma" content="no-cache"/>
-
-    <style>
-        .staticrypt-hr {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            border: 0;
-            border-top: 1px solid #eee;
-        }
-
-        .staticrypt-page {
-            width: 360px;
-            padding: 8% 0 0;
-            margin: auto;
-            box-sizing: border-box;
-        }
-
-        .staticrypt-form {
-            position: relative;
-            z-index: 1;
-            background: #FFFFFF;
-            max-width: 360px;
-            margin: 0 auto 100px;
-            padding: 45px;
-            text-align: center;
-            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-        }
-
-        .staticrypt-form input {
-            outline: 0;
-            background: #f2f2f2;
-            width: 100%;
-            border: 0;
-            margin: 0 0 15px;
-            padding: 15px;
-            box-sizing: border-box;
-            font-size: 14px;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button {
-            text-transform: uppercase;
-            outline: 0;
-            background: #4CAF50;
-            width: 100%;
-            border: 0;
-            padding: 15px;
-            color: #FFFFFF;
-            font-size: 14px;
-            cursor: pointer;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button:hover, .staticrypt-form .staticrypt-decrypt-button:active, .staticrypt-form .staticrypt-decrypt-button:focus {
-            background: #43A047;
-        }
-
-        .staticrypt-html {
-            height: 100%;
-        }
-
-        .staticrypt-body {
-            margin-bottom: 1em;
-            background: #76b852; /* fallback for old browsers */
-            background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-            background: -moz-linear-gradient(right, #76b852, #8DC26F);
-            background: -o-linear-gradient(right, #76b852, #8DC26F);
-            background: linear-gradient(to left, #76b852, #8DC26F);
-            font-family: "Arial", sans-serif;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        .staticrypt-instructions {
-            margin-top: -1em;
-            margin-bottom: 1em;
-        }
-
-        .staticrypt-title {
-            font-size: 1.5em;
-        }
-
-        .staticrypt-footer {
-            position: fixed;
-            height: 20px;
-            font-size: 16px;
-            padding: 2px;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin-bottom: 0;
-        }
-
-        .staticrypt-footer p {
-            margin: 2px;
-            text-align: center;
-            float: right;
-        }
-
-        .staticrypt-footer a {
-            text-decoration: none;
-        }
-    </style>
 </head>
 
-<body class="staticrypt-body">
-<div class="staticrypt-page">
-    <div class="staticrypt-form">
-        <div class="staticrypt-instructions">
-            <p class="staticrypt-title">Protected Page</p>
-            <p></p>
+<div class="main-box">
+  <div>
+    <img src="./src/icons/troop370buglelogo.png" style="display: none;">
+    <p class="logo">Troop 370</p>
+    <p class="instruction-heading">Sign in</p>
+    <p class="instruction-sub">with your member password</p>
+  </div>
+  <form id="staticrypt-form" action="#" method="post">
+    <div class="mdc-text-field mdc-text-field--outlined input member-pass">
+      <input id="staticrypt-password" type="password" name="password" class="mdc-text-field__input" autofocus="autofocus">
+      <div class="mdc-notched-outline">
+        <div class="mdc-notched-outline__leading"></div>
+        <div class="mdc-notched-outline__notch">
+          <label for="staticrypt-password" class="mdc-floating-label">Password</label>
         </div>
-
-        <hr class="staticrypt-hr">
-
-        <form id="staticrypt-form" action="#" method="post">
-            <input id="staticrypt-password"
-                   type="password"
-                   name="password"
-                   placeholder="passphrase"
-                   autofocus/>
-
-            <input type="submit" class="staticrypt-decrypt-button" value="DECRYPT"/>
-        </form>
+        <div class="mdc-notched-outline__trailing"></div>
+      </div>
     </div>
-
+    <p class="password-question">Don't know the password? Request the password from the Webmaster.</p>
+    <a href="./contact-webmaster.html" class="mdc-button contact">Contact Webmaster</a>
+    <div class="submit-button">
+      <button type="submit" class="mdc-button mdc-button--raised standard-dark-button" value="Submit">Submit</button>
+    </div>
+  </form>
 </div>
-<footer class="staticrypt-footer">
-    <p class="pull-right">Created with <a href="https://robinmoisson.github.io/staticrypt">StatiCrypt</a></p>
-</footer>
+
+<!--imported mdc script-->
+<script src="./js/main.js"></script>
 
 
 <script>/**
