--- a/_scss/theme-dark.scss
+++ b/_scss/theme-dark.scss
@@ -30,18 +30,18 @@ $mdc-typography-styles-button: (
 );
 $content-width: 1200px;
 
-$mdc-theme-primary: #003f87;
+$mdc-theme-primary: #aac0eb;
 $mdc-theme-on-primary: if(mdc-theme-contrast-tone($mdc-theme-primary) == "dark", #000, #fff) !default;
-$mdc-theme-secondary: #bc1b2d;
+$mdc-theme-secondary: #ffb3b3;
 $mdc-theme-on-secondary: if(mdc-theme-contrast-tone($mdc-theme-secondary) == "dark", #000, #fff) !default;
-$mdc-theme-background: #ffffff;
-$mdc-theme-on-background: #000000;
+$mdc-theme-background: #121212;
+$mdc-theme-on-background: #ffffff;
 $mdc-theme-surface: #fff !default;
 $mdc-theme-on-surface: if(mdc-theme-contrast-tone($mdc-theme-surface) == "dark", #000, #fff) !default;
 $mdc-theme-error: #b00020 !default;
 $mdc-theme-on-error: if(mdc-theme-contrast-tone($mdc-theme-error) == "dark", #000, #fff) !default;
 
-$topnav-background: #f7f7f7;
+$topnav-background: #171717;
 
 $content-strip-heading-headline-size: (
   h1: headline4,
@@ -58,18 +58,18 @@ $content-strip-padding-y-min: 5px;
 $content-strip-padding-x: 10px;
 $content-strip-item-margin-y: 5px;
 $content-strip-item-margin-x: 0;
-$content-strip-primary-background: $mdc-theme-primary;
-$content-strip-secondary-background: $mdc-theme-secondary;
+$content-strip-primary-background: darken($mdc-theme-primary, 60%);
+$content-strip-secondary-background: darken($mdc-theme-secondary, 60%);
 
 $sidenav-width: 300px;
-$sidenav-bg-color: $mdc-theme-surface;
+$sidenav-bg-color: $mdc-theme-background;
 $sidenav-line-height: 48px;
-$sidenav-font-color: #000;
+$sidenav-font-color: $mdc-theme-on-background;
 $sidenav-font-size: 14px;
 $sidenav-font-family: $mdc-typography-font-family;
 $sidenav-item-height: 48px;
 $sidenav-padding: 16px;
-$sidenav-divider-color: #e0e0e0;
+$sidenav-divider-color: #212121;
 $primary-color: navy;
 $sidenav-header-background-color: $mdc-theme-background;
 $sidenav-header-bugler-fill-color: $mdc-theme-primary;
