--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <meta name="theme-color" content="#efefef">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main-dark.css">
     <title class="page-title">{{ page.title }} | {{ site.title }}</title>
   </head>
   <body>
