--- a/_includes/sidenav-link.html
+++ b/_includes/sidenav-link.html
@@ -1,1 +1,1 @@
-<li><a href="{{ include.url }}">{{ include.name }}</a></li>
+<li><a href="{{ include.url }}" class="sidenav-close">{{ include.name }}</a></li>
