--- a/_scss/theme-dark.scss
+++ b/_scss/theme-dark.scss
@@ -32,11 +32,11 @@ $mdc-typography-styles-button: (
 $content-width: 1200px;
 
 $mdc-theme-primary: #809fc3;
-$mdc-theme-on-primary: if(mdc-theme-contrast-tone($mdc-theme-primary) == "dark", #000, #fff) !default;
+$mdc-theme-on-primary: if(mdc-theme-contrast-tone($mdc-theme-primary) == "dark", #000, #dedede) !default;
 $mdc-theme-secondary: #de8d96;
-$mdc-theme-on-secondary: if(mdc-theme-contrast-tone($mdc-theme-secondary) == "dark", #000, #fff) !default;
+$mdc-theme-on-secondary: if(mdc-theme-contrast-tone($mdc-theme-secondary) == "dark", #000, #dedede) !default;
 $mdc-theme-background: #212121;
-$mdc-theme-on-background: #ffffff;
+$mdc-theme-on-background: #dedede;
 $mdc-theme-surface: #fff !default;
 $mdc-theme-on-surface: if(mdc-theme-contrast-tone($mdc-theme-surface) == "dark", #000, #fff) !default;
 $mdc-theme-error: #cf6679;
