--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -6,8 +6,9 @@ p, ul, ol {
   @include mdc-typography(body1);
 }
 .page-content {
-  height: calc(100vh - 57px);
+  height: calc(100vh - 56px);
   overflow: auto;
+  background: $mdc-theme-background;
 }
 .mdc-button {
   @include mdc-button-shape-radius(0px);
