use i for menu icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,10 +71,7 @@
         <div class="grid-container">
           <div class="grid-item-title">
             <button data-target="slide-out" class="menu-icon mdc-icon-button sidenav-trigger">
-              <svg xmlns="http://www.w3.org/2000/svg" class="menu-icon2" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"></path>
-                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-              </svg>
+              <i class="material-icons">menu</i>
             </button>
             <a id="topnav-title">BSA Troop 370</a>
           </div>
