--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -1,3 +1,8 @@
+html, body, h1, h2, h3, h4, h5, h6, p, button, a {
+  background: unset;
+  color: unset;
+  border: unset;
+}
 html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
