--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -1,3 +1,6 @@
+$breakpoint-mobile: 600px;
+$breakpoint-middle: 1000px;
+
 $mdc-typography-font-family: Roboto, sans-serif;
 $mdc-typography-headline-font-family: "IBM Plex Sans", Roboto, sans-serif;
 $mdc-typography-headline-condensed-font-family: "IBM Plex Sans Condensed", "Helvetica Neue", Arial, sans-serif;
