--- a/_scss/theme-dark.scss
+++ b/_scss/theme-dark.scss
@@ -65,7 +65,9 @@ $content-strip-heading-headline-size: (
   h6: headline6
 );
 $content-strip-padding-y: 35px;
+$content-strip-padding-bm-y: 20px;
 $content-strip-padding-y-extra: 80px;
+$content-strip-padding-bm-y-extra: 40px;
 $content-strip-padding-y-reduced: 15px;
 $content-strip-padding-y-min: 5px;
 $content-strip-padding-x: 10px;
