--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -10,6 +10,9 @@ html, body, h1, h2, h3, h4, h5, h6, p {
 p, ul, ol {
   @include mdc-typography(body1);
 }
+canvas#topbar {
+    margin-top: 53px;
+}
 .page-content {
   height: calc(100vh - 56px);
   overflow: auto;
