--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -10,6 +10,19 @@ html, body, h1, h2, h3, h4, h5, h6, p {
 p, ul, ol {
   @include mdc-typography(body1);
 }
+@media (max-width: $breakpoint-mobile) {
+  input, textarea, button, select, a {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+  }
+  html, a {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+}
 canvas#topbar {
     margin-top: 53px;
 }
