--- a/_scss/theme-dark.scss
+++ b/_scss/theme-dark.scss
@@ -52,6 +52,9 @@ $button-filled-text-color: $mdc-theme-background;
 $button-on-background: $mdc-theme-primary;
 $button-on-primary: $mdc-theme-primary;
 $button-on-secondary: $mdc-theme-primary;
+$button-outlined-on-background-outline: #606060;
+$button-outlined-on-primary-outline: #606060;
+$button-outlined-on-secondary-outline: #606060;
 
 $states-hover-opacity: 0.04;
 $states-focus-opacity: 0.12;
