--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -52,6 +52,9 @@ $button-filled-text-color: $mdc-theme-background;
 $button-on-background: $mdc-theme-primary;
 $button-on-primary: $mdc-theme-on-primary;
 $button-on-secondary: $mdc-theme-on-secondary;
+$button-outlined-on-background-outline: $mdc-theme-primary;
+$button-outlined-on-primary-outline: $mdc-theme-on-primary;
+$button-outlined-on-secondary-outline: $mdc-theme-on-secondary;
 
 $states-hover-opacity: 0.08;
 $states-focus-opacity: 0.24;
